<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="autostalker.bananaforscale.com.autostalker.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_configuracion"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_test_bluetooth"
        android:orderInCategory="102"
        android:title="@string/action_testbluetooth"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_chat"
        android:orderInCategory="103"
        android:title="@string/test_protocol_send"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_server"
        android:orderInCategory="104"
        android:title="@string/test_protocol_receive"
        app:showAsAction="never" />
</menu>
