<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="autostalker.bananaforscale.com.autostalker.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgCar"
            android:layout_width="35pt"
            android:layout_height="35pt"
            android:src="@drawable/car" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:text="@string/btn_drive_mode"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/imgSettings"
            android:layout_width="35pt"
            android:layout_height="35pt"
            android:layout_marginTop="25dp"
            android:src="@drawable/settings" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_settings"
            android:textSize="20dp"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/imgLastTravel"
            android:layout_width="35pt"
            android:layout_height="35pt"
            android:layout_marginTop="25dp"
            android:src="@drawable/camera" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/btn_last_travel"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/imgHelp"
            android:layout_width="35pt"
            android:layout_height="35pt"
            android:layout_marginTop="25dp"
            android:src="@drawable/help" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/btn_help"
            android:textAlignment="center" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
